<resources>
    <string name="app_name">HolaMundo</string>
    <string name="title_name">Calculadora</string>
    <string name="txtIn1_name">Valor 1:</string>
    <string name="txtIn2_name">Valor 2:</string>
    <string name="button1_name">CALCULAR</string>
    <string name="label1_name">Resultado:</string>
    <string name="check1_name">Sumar</string>
    <string name="check2_name">Restar</string>
</resources>